<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:background="@color/common_bg"
    android:focusableInTouchMode="true">

    <!--顶部toolbar-->
    <include layout="@layout/common_toolbar_textview"/>

    <EditText
        android:id="@+id/et_old_password"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_margin="@dimen/padding_10"
        android:background="@drawable/bg_edittext"
        android:gravity="center_vertical"
        android:password="true"
        android:paddingLeft="@dimen/padding_8"
        android:hint="@string/please_input_old_password_hint"
        android:textColorHint="@color/gray_text_color"
        android:textColor="@color/input_text_color"
        android:textSize="12sp"/>

    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/padding_8"
        android:background="@drawable/bg_edittext"
        android:hint="@string/please_input_new_password_hint"
        android:password="true"
        android:textColorHint="@color/gray_text_color"
        android:textColor="@color/input_text_color"
        android:textSize="12sp"/>

    <EditText
        android:id="@+id/et_repassword"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/padding_8"
        android:background="@drawable/bg_edittext"
        android:hint="@string/please_input_repassword_hint"
        android:password="true"
        android:textColorHint="@color/gray_text_color"
        android:textColor="@color/input_text_color"
        android:textSize="12sp"/>

    <TextView
        android:gravity="center"
        android:id="@+id/btn_complete"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_margin="@dimen/padding_10"
        android:background="@drawable/select_btn_status1"
        android:text="@string/mine_complete_btn"
        android:textSize="14sp"
        android:textColor="@color/white" />

</LinearLayout>