<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:background="@color/common_bg"
    android:focusableInTouchMode="true">

    <!--顶部toolbar-->
    <include layout="@layout/common_toolbar_textview"/>

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_margin="@dimen/padding_10"
        android:background="@drawable/bg_edittext"
        android:gravity="center_vertical"
        android:hint="@string/please_input_login_password"
        android:paddingLeft="@dimen/padding_8"
        android:password="true"
        android:textColorHint="@color/gray_text_color"
        android:textColor="@color/input_text_color"
        android:textSize="12sp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="0dp"
        android:orientation="horizontal">

    <EditText
        android:id="@+id/et_new_mobile"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginLeft="@dimen/padding_10"
        android:layout_marginRight="@dimen/padding_10"
        android:background="@drawable/bg_edittext"
        android:gravity="center_vertical"
        android:hint="@string/please_input_new_mobile"
        android:inputType="phone"
        android:paddingLeft="65dp"
        android:textColorHint="@color/gray_text_color"
        android:textColor="@color/input_text_color"
        android:textSize="12sp"/>


        <LinearLayout
            android:id="@+id/ll_change"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginLeft="0dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
            <!-- 国家区码 -->
            <TextView
                android:id="@+id/tv_num"
                android:layout_width="65dp"
                android:layout_height="34dp"
                android:layout_marginLeft="1dp"
                android:gravity="center"
                android:paddingLeft="12dp"
                android:paddingRight="10dp"
                android:text="+86"
                android:textColor="@color/blue_ok"
                android:textSize="14sp" />

            <View
                android:layout_width="1px"
                android:layout_height="24dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="0dp"
                android:background="@color/view_vertical_color"/>

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_10"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_get_verify_code"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_marginRight="@dimen/padding_10"
            android:layout_weight="1"
            android:background="@drawable/bg_edittext"
            android:gravity="center_vertical"
            android:inputType="number"
            android:hint="@string/please_input_code_from_mobile"
            android:paddingLeft="@dimen/padding_8"
            android:layout_marginBottom="1dp"
            android:textColorHint="@color/gray_text_color"
            android:textColor="@color/input_text_color"
            android:textSize="12sp" />

        <TextView
            android:gravity="center"
            android:id="@+id/btn_verify_code"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:layout_weight="2"
            android:background="@drawable/bg_rectangular_green_5"
            android:text="@string/get_verify_code"
            android:textSize="14sp"
            android:textColor="@color/white" />

    </LinearLayout>

    <TextView
        android:gravity="center"
        android:textSize="14sp"
        android:id="@+id/btn_complete"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="@dimen/padding_10"
        android:layout_marginRight="@dimen/padding_10"
        android:background="@drawable/select_btn_status1"
        android:text="@string/mine_complete_btn"
        android:textColor="@color/white" />

</LinearLayout>