<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialogfragment_title"
        android:padding="15dp"
        android:text="@string/mine_choose_city"
        android:textColor="@color/white"
        android:textSize="18sp" />
    
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="4dp">

        <com.ruihai.xingka.widget.wheelview.WheelView
            android:id="@+id/wheel_province"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:layout_weight="1" />

        <com.ruihai.xingka.widget.wheelview.WheelView
            android:id="@+id/wheel_city"
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rectangular_bottom"
        android:orientation="horizontal"
        android:padding="@dimen/padding_10">

        <Button
            android:id="@+id/btn_positive"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_rectangular_green_5"
            android:gravity="center"
            android:paddingBottom="@dimen/padding_5"
            android:paddingLeft="@dimen/padding_15"
            android:paddingRight="@dimen/padding_15"
            android:paddingTop="5dp"
            android:text="@string/sure"
            android:textColor="#fff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_negative"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/bg_rectangular_gray_5"
            android:gravity="center"
            android:paddingBottom="@dimen/padding_5"
            android:paddingLeft="@dimen/padding_15"
            android:paddingRight="@dimen/padding_15"
            android:paddingTop="5dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>